--- a/cheater_rails.yml
+++ b/cheater_rails.yml
@@ -76,3 +76,15 @@
     -
       command: rake stats
       desc: Statistics on code, displaying things like KLOCs 
+ -
+  group: PERFORMANCE TESTING COMMANDS
+  commands:
+    -
+      command: rails generate performance_test homepage
+      desc: Generates homepage_test.rb in the test/performance directory
+    -
+      command: rake test:benchmark
+      desc: Generates few metrics about each test run; each test case is run 4 times in benchmarking mode
+    - 
+      command: rake test:profile
+      desc: Generates in-depth analysis of each of your tests by using an external profiler. (MRI, which uses RubyProf)
